--- a/喜马拉雅/classes/搜索/view/RCSearchViewCell.xib
+++ b/喜马拉雅/classes/搜索/view/RCSearchViewCell.xib
@@ -20,7 +20,7 @@
                             <constraint firstAttribute="height" constant="15" id="Dmg-Li-CRY"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lLG-QD-qtl">
