--- a/喜马拉雅/classes/搜索/view/user/RCUserDeailViewCell.xib
+++ b/喜马拉雅/classes/搜索/view/user/RCUserDeailViewCell.xib
@@ -27,7 +27,7 @@
                             <constraint firstAttribute="height" constant="21" id="Qjs-rj-Wqb"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="声音" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bgs-1j-xiC">
